# Recommender-systems

./: .gitignore  README.md  pyproject.toml
app/: download_dataset.py  main.py
app/recommenders/: als.py  association.py  base_recommend.py  knn_collab_filtering.py  lightfm.py  mf.py  popularity.py  random_forest.py
app/utils/: data_loader.py  metrics.py  types.py
