[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Joichiro433 <joichiro322@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
rich = "13.6.0"
numpy = "1.26.1"
nptyping = "2.5.0"
pandas = "2.1.2"
polars = "0.19.12"
matplotlib = "3.8.0"
seaborn = "0.13.0"
plotly = "5.18.0"
jupyterlab = "4.0.7"
ipywidgets = "8.1.1"
python-dotenv = "1.0.0"
ruff = "0.1.4"
pyarrow = "14.0.1"
scikit-learn = "1.3.2"
pytest = "7.4.3"
mlxtend = "0.23.0"
ipykernel = "6.26.0"
pretty-errors = "1.2.25"
lightfm = "1.17"
implicit = "0.7.2"
h5py = "3.10.0"
scipy = "1.11.4"
optuna = "3.4.0"
scikit-surprise = "1.1.3"
mlflow = "2.8.1"
typer = "0.9.0"
gensim = "4.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "N", "W", "I", "B", "PL", "ANN", "PD", "NPY", "AIR", "DJ", "RUF"]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "ANN002",  # missing-type-args
    "ANN003",  # missing-type-kwargs
    "RUF001",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF002",  # 全角記号など`ambiguous unicode character`も使いたいため
    "RUF003",  # 全角記号など`ambiguous unicode character`も使いたいため
]
line-length = 120

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]